--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\JavaEssentials\\H2","type":"PROJECT","hints":{"PROJECT_NAME":"H2"}},"ABSENT"],[{"location":"C:\\Program Files (x86)\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files (x86)\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\JavaEssentials\\Games","type":"PROJECT","hints":{"PROJECT_NAME":"Games"}},"ABSENT"]]
